<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thepokemoncompany.pokedex.view.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            cardCornerRadius="@dimen/card_pokemon_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_details_icon"
                    android:layout_width="match_parent"
                    android:layout_height="140dp" />

                <TextView
                    android:id="@+id/tv_details_name"
                    android:textColor="@color/colorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:text="Pokemon"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            cardCornerRadius="@dimen/card_pokemon_radius">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1"
                android:layout_margin="4dp">

                <TableRow>
                    <TextView
                        android:text="@string/height"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_height"
                        android:text="0"
                        android:padding="3dp"
                        android:paddingStart="5dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/weight"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_weight"
                        android:text="0"
                        android:padding="3dp"
                        android:paddingStart="5dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/abilities"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_abilities"
                        android:text="0"
                        android:padding="3dp"
                        android:paddingStart="5dp"/>
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            cardCornerRadius="@dimen/card_pokemon_radius">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="2"
                android:layout_margin="4dp">

                <TableRow>
                    <TextView
                        android:text="@string/hp"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_hp"
                        android:text="0"
                        android:padding="3dp" />

                    <ProgressBar
                        android:id="@+id/progress_details_hp"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="400"
                        android:min="0"
                        android:progress="50" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/attack"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_attack"
                        android:text="0"
                        android:padding="3dp" />

                    <ProgressBar
                        android:id="@+id/progress_details_attack"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="400"
                        android:min="0"
                        android:progress="50" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/defense"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_defense"
                        android:text="0"
                        android:padding="3dp" />

                    <ProgressBar
                        android:id="@+id/progress_details_defense"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="400"
                        android:min="0"
                        android:progress="50" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/sp_attack"
                        android:padding="3dp" />

                    <TextView
                        android:id="@+id/tv_details_sp_attack"
                        android:text="0"
                        android:padding="3dp" />

                    <ProgressBar
                        android:id="@+id/progress_details_sp_attack"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="400"
                        android:min="0"
                        android:progress="50" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/sp_defense"
                        android:padding="3dp" />

                    <TextView
                        android:id="@+id/tv_details_sp_defense"
                        android:text="0"
                        android:padding="3dp" />

                    <ProgressBar
                        android:id="@+id/progress_details_sp_defense"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="400"
                        android:min="0"
                        android:progress="50" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/speed"
                        android:padding="3dp" />

                    <TextView
                        android:id="@+id/tv_details_speed"
                        android:text="0"
                        android:padding="3dp" />

                    <ProgressBar
                        android:id="@+id/progress_details_speed"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="400"
                        android:min="0"
                        android:progress="50" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/total"
                        android:padding="3dp" />

                    <TextView
                        android:id="@+id/tv_details_total"
                        android:text="0"
                        android:padding="3dp" />

                    <ProgressBar
                        android:id="@+id/progress_details_total"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="2400"
                        android:min="0"
                        android:progress="50" />
                </TableRow>

            </TableLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            cardCornerRadius="@dimen/card_pokemon_radius">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="4"
                android:layout_margin="4dp">

                <TableRow>
                    <TextView
                        android:text="@string/gender"
                        android:padding="3dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:paddingTop="2dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_female" />

                    <TextView
                        android:id="@+id/tv_details_gender_female"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:padding="3dp"
                        android:text="0" />

                    <ImageView
                        android:layout_width="30dp"
                        android:paddingTop="2dp"
                        android:layout_marginStart="20dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_male" />

                    <TextView
                        android:id="@+id/tv_details_gender_male"
                        android:text="0"
                        android:padding="3dp" />

                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/growth_rate"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_growth_rate"
                        android:layout_weight="1"
                        android:text="0"
                        android:padding="3dp"
                        android:paddingStart="5dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/capture_rate"
                        android:padding="3dp" />
                    <TextView
                        android:id="@+id/tv_details_capture_rate"
                        android:layout_weight="1"
                        android:text="0"
                        android:padding="3dp"
                        android:paddingStart="5dp"/>
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            cardCornerRadius="@dimen/card_pokemon_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moviments"
                    android:textSize="@dimen/pokemon_title"
                    android:gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:id="@+id/tv_details_movements"
                    android:layout_marginEnd="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp"
                    android:gravity="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
