<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thepokemoncompany.pokedex.view.MyPokemonsActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pokemon_count_padding_bottom"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            cardCornerRadius="@dimen/card_pokemon_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_team"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:textColor="@color/colorTitle"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="2">

                    <TableRow>
                        <TextView
                            android:text="@string/hp"
                            android:padding="3dp" />
                        <TextView
                            android:id="@+id/tv_my_pokemons_hp"
                            android:text="0"
                            android:padding="3dp" />

                        <ProgressBar
                            android:id="@+id/progress_my_pokemons_hp"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:max="2400"
                            android:min="0"
                            android:progress="50" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/attack"
                            android:padding="3dp" />
                        <TextView
                            android:id="@+id/tv_my_pokemons_attack"
                            android:text="0"
                            android:padding="3dp" />

                        <ProgressBar
                            android:id="@+id/progress_my_pokemons_attack"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:max="2400"
                            android:min="0"
                            android:progress="50" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/defense"
                            android:padding="3dp" />
                        <TextView
                            android:id="@+id/tv_my_pokemons_defense"
                            android:text="0"
                            android:padding="3dp" />

                        <ProgressBar
                            android:id="@+id/progress_my_pokemons_defense"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:max="2400"
                            android:min="0"
                            android:progress="50" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/sp_attack"
                            android:padding="3dp" />

                        <TextView
                            android:id="@+id/tv_my_pokemons_sp_attack"
                            android:text="0"
                            android:padding="3dp" />

                        <ProgressBar
                            android:id="@+id/progress_my_pokemons_sp_attack"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:max="2400"
                            android:min="0"
                            android:progress="50" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/sp_defense"
                            android:padding="3dp" />

                        <TextView
                            android:id="@+id/tv_my_pokemons_sp_defense"
                            android:text="0"
                            android:padding="3dp" />

                        <ProgressBar
                            android:id="@+id/progress_my_pokemons_sp_defense"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:max="2400"
                            android:min="0"
                            android:progress="50" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/speed"
                            android:padding="3dp" />

                        <TextView
                            android:id="@+id/tv_my_pokemons_speed"
                            android:text="0"
                            android:padding="3dp" />

                        <ProgressBar
                            android:id="@+id/progress_my_pokemons_speed"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:max="2400"
                            android:min="0"
                            android:progress="50" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/total"
                            android:padding="3dp" />

                        <TextView
                            android:id="@+id/tv_my_pokemons_total"
                            android:text="0"
                            android:padding="3dp" />

                        <ProgressBar
                            android:id="@+id/progress_my_pokemons_total"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="3dp"
                            android:paddingEnd="3dp"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:max="14400"
                            android:min="0"
                            android:progress="50" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/pokemon_count_padding_bottom"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            cardCornerRadius="@dimen/card_pokemon_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/the_best_attack"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/tv_my_pokemons_best_attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="0"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_my_pokemons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:padding="@dimen/pokemon_count_padding_bottom">
        </android.support.v7.widget.RecyclerView>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_team_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/team_empty"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
